k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liber
  namespace: liber
spec:
  rules:
    - host: liber.simssa.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liber-search
                port:
                  number: 80
    - host: liber2.simssa.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liber-search
                port:
                  number: 80
